--- a/css/styles.css
+++ b/css/styles.css
@@ -818,6 +818,7 @@ img {
 
   width: 30px;
   height: 30px;
+
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   background-color: transparent;
@@ -828,7 +829,11 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+
+  width: 11px;
+  height: 11px;
 }
+
 .is-hidden {
   opacity: 0;
   pointer-events: none;
