--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,10 @@
   --filters-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
     0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   --backdrop-bg-color: rgba(0, 0, 0, 0.2);
+  --bg-overlay-thumb: rgba(47, 48, 58, 0.8);
+  --bg-cover-portfolio: rgba(33, 150, 243, 0.9);
+  --modal-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 /* цвет героя background: #2F303A; */
@@ -390,29 +394,9 @@ img {
   text-align: center;
 
   color: var(--accessorial-text-color);
-  background: rgba(47, 48, 58, 0.8);
+  background: var(--bg-overlay-thumb);
 
   text-transform: uppercase;
-}
-
-.work-item-text::after {
-  content: "";
-  position: absolute;
-
-  left: 0;
-  bottom: 30px;
-
-  width: 100%;
-  height: 2px;
-
-  background-color: var(--accent-color);
-  transform: scaleX(0);
-  transition: width 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  z-index: 1;
-}
-
-.work-item-text:hover::after {
-  transform: scaleX(0.55);
 }
 
 /* our team */
@@ -734,7 +718,7 @@ img {
   line-height: 1.56;
 
   color: var(--accessorial-text-color);
-  background-color: rgba(33, 150, 243, 0.9);
+  background-color: var(--bg-cover-portfolio);
 
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -801,10 +785,10 @@ img {
   transform: translate(-50%, -50%) rotate(360deg) scale(1);
 
   background: var(--accessorial-text-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: var(--modal-shadow);
   border-radius: 4px;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close {
