--- a/css/styles.css
+++ b/css/styles.css
@@ -185,20 +185,20 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   color: var(--paragraph-text-color);
 }
 
 .auth-nav-icon {
   margin-right: 10px;
-  fill: var(--icon-color);
-}
-
-.auth-nav-link:hover .auth-nav-icon,
-.auth-nav-link:focus .auth-nav-icon {
   fill: currentColor;
 }
+
+/* .auth-nav-link:hover .auth-nav-icon,
+.auth-nav-link:focus .auth-nav-icon {
+  fill: 
+} */
 
 .auth-nav .item + .item {
   margin-left: 50px;
@@ -259,17 +259,13 @@ img {
   background-color: var(--accent-color);
   color: var(--accessorial-text-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    text-decoration 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color var(--accent-color) 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+   
   cursor: pointer;
 }
 
 .hero-button:hover,
 .hero-button:focus {
   background-color: var(--button-accent-color);
-  color: var(--accessorial-text-color);
-  text-decoration: underline var(--accent-color);
 }
 
 /* section */
@@ -472,18 +468,23 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  fill: var(--icon-color);
+  color: var(--icon-color);
   background-color: transparent;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-list-link:hover,
 .social-list-link:focus {
   background-color: var(--accent-color);
-  fill: var(--accessorial-text-color);
+  color: var(--accessorial-text-color);
 }
 
+.social-list-icon {
+  fill: currentColor;
+} 
+
+/* clients */
 .clients-list {
   display: flex;
   justify-content: center;
@@ -496,12 +497,17 @@ img {
   border: 1px solid #afb1b8;
   border-radius: 4px;
   box-sizing: border-box;
-  fill: var(--icon-color);
+  color: var(--icon-color);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-list-item:hover {
   border-color: var(--accent-color);
-  fill: var(--accent-color);
+  color: var(--accent-color);
+}
+
+.clients-list-icon {
+  fill: currentColor;
 }
 
 .clients-list-item + .clients-list-item {
@@ -601,9 +607,13 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  fill: var(--accessorial-text-color);
+  color: var(--accessorial-text-color);
   background-color: rgba(255, 255, 255, 0.1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social-icon {
+  fill: currentColor;
 }
 
 .footer-social-link:hover,
