--- a/css/styles.css
+++ b/css/styles.css
@@ -253,8 +253,7 @@ img {
 
   background-color: var(--accent-color);
   color: var(--accessorial-text-color);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-   
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
 }
 
@@ -363,7 +362,7 @@ img {
 
 .work-item {
   position: relative;
-  flex-basis: calc((100%- 60px) / 3);
+  flex-basis: calc((100% - 60px) / 3);
   margin-right: 30px;
 }
 
@@ -398,7 +397,7 @@ img {
 }
 
 .team-list-item {
-  flex-basis: calc((100%- 90px) / 4);
+  flex-basis: calc((100% - 90px) / 4);
   margin-right: 30px;
 
   background-color: var(--accessorial-text-color);
@@ -477,7 +476,7 @@ img {
 
 .social-list-icon {
   fill: currentColor;
-} 
+}
 
 /* clients */
 .clients-list {
@@ -487,7 +486,7 @@ img {
 }
 
 .clients-list-item {
-  flex-basis: calc((100%-150px) / 6);
+  flex-basis: calc((100% - 150px) / 6);
   padding: 16px 30px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
