add cursor to modalCloseButton

--- a/css/styles.css
+++ b/css/styles.css
@@ -803,6 +803,8 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   background-color: transparent;
+
+  cursor: pointer;
 }
 
 .modal-close-icon {
